--- a/FL7-L02/index_logo.html
+++ b/FL7-L02/index_logo.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
     <title>Task 1</title>
-	<link rel="stylesheet" href="C:\Users\TarasKharkhalis\Desktop\Guide examples\GitHub\FL7-Homeworks\FL7-L02\style\style_logo.css">
+	<link rel="stylesheet" href="style_logo.css">
 </head>
 
 <body>
