--- a/FL7-L02/index_markup.html
+++ b/FL7-L02/index_markup.html
@@ -2,7 +2,7 @@
 
 <html>
 <head>
-    <title>Page Title</title>
+    <title>Task 2</title>
 	<meta charset="utf-8">
 	<link rel="stylesheet" href="style_markup.css">
 </head>
@@ -10,6 +10,87 @@
 <body>
 
 
+	<section class="item" id="austria">
+		<article class="country">
+			<a href="#expand"><p>Austria</p></a>
+		</article>
+	</section>
+		
+	<section class="item" id="bulgaria">
+		<article class="country">
+			<a><p>Bulgaria</p></a>
+		</article>
+	</section>
+	
+	<section class="item" id="netherlands">
+		<article class="country">
+			<a><p>Netherlands</p></a>
+		</article>
+	</section>
 
+	<section class="item" id="usa">
+		<article class="country">
+			<a><p>USA</p></a>
+		</article>
+	</section>
+	
+	<section id="expand">
+		<span class="close"><a href="#">&#9746;</a></span>
+		<article>
+			<h1>AUSTRIA</h1>
+			<p>Vienna
+Nottendorfer Gasse 11,
+1030 Wien
+Austria </p>
+		</article>
+	</section>
+		
+	<section class="item" id="finland">
+		<article class="country">
+			<a><p>Finland</p></a>
+		</article>
+	</section>
+
+	<section class="item" id="poland">
+		<article class="country">
+			<a><p>Poland</p></a>
+		</article>
+	</section>
+	
+	<section class="item" id="ukraine">
+		<article class="country">
+			<a><p>Ukraine</p></a>
+		</article>
+	</section>
+	
+	<section class="item" id="spain">
+		<article class="country">
+			<a><p>Spain</p></a>
+		</article>
+	</section>
+	
+	<section class="item" id="latvia">
+		<article class="country">
+			<a><p>Latvia</p></a>
+		</article>
+	</section>
+	
+	<section class="item" id="romania">
+		<article class="country">
+			<a><p>Romania</p></a>
+		</article>
+	</section>
+	
+	<section class="item" id="germany">
+		<article class="country">
+			<a><p>Germany</p></a>
+		</article>
+	</section>
+	
+	<section class="item" id="france">
+		<article class="country">
+			<a><p>France</p></a>
+		</article>
+	</section>
 </body>
 </html>
