--- a/FL7-L02/index_logo.html
+++ b/FL7-L02/index_logo.html
@@ -9,7 +9,7 @@
 
 <body>
 
-<div class="format"><h1>epam</h1></div>
+<div class="format"><h1><span class="tag">epam</span></h1></div>
 
 </body>
 </html>
