--- a/FL7-L02/index_markup.html
+++ b/FL7-L02/index_markup.html
@@ -35,13 +35,14 @@
 	</section>
 	
 	<section id="expand">
-		<span class="close"><a href="#">&#9746;</a></span>
+		<span class="close"><a href="#">&#x2716;</a></span>
 		<article>
-			<h1>AUSTRIA</h1>
-			<p>Vienna
-Nottendorfer Gasse 11,
-1030 Wien
-Austria </p>
+			<div class="office"><h1>AUSTRIA</h1></div>
+			<h2>Vienna<h2>
+			<div class="address">
+Nottendorfer Gasse 11,<br>
+1030 Wien<br>
+Austria</div>
 		</article>
 	</section>
 		
