--- a/FL7-L02/index_markup.html
+++ b/FL7-L02/index_markup.html
@@ -36,12 +36,26 @@
 	
 	<section id="expand">
 		<span class="close"><a href="#">&#x2716;</a></span>
-		<article>
+		<article class="loc">
 			<div class="office"><h1>AUSTRIA</h1></div>
 			<h2>Vienna<h2>
 			<div class="address">
 Nottendorfer Gasse 11,<br>
 1030 Wien<br>
+Austria</div>
+		</article>
+		<article class="loc">
+			<h2>Vienna<h2>
+			<div class="address">
+Icecream road 24,<br>
+1343 Shtrasse<br>
+Austria</div>
+		</article>
+		<article class="loc">
+			<h2>Vienna<h2>
+			<div class="address">
+Mushroom ave 56,<br>
+1343 Wien<br>
 Austria</div>
 		</article>
 	</section>
